--- a/AngularJS/pom.xml
+++ b/AngularJS/pom.xml
@@ -59,7 +59,12 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
-
+    
+     <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.5.0</version>
+      </dependency>
   </dependencies>
   
    <build>
