--- a/AngularJS/pom.xml
+++ b/AngularJS/pom.xml
@@ -31,6 +31,15 @@
     <version>1.2</version>
     </dependency>
     
+    <!-- JDBC -->
+    <!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
+    <dependency>
+      <groupId>postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.1-901-1.jdbc4</version>
+    </dependency>
+
+
 		<!-- Spring dependencies -->
 		<!-- http://mvnrepository.com/artifact/org.springframework/spring-core -->
 		<dependency>
