--- a/SisteFinanPes/Planilha/pom.xml
+++ b/SisteFinanPes/Planilha/pom.xml
@@ -31,14 +31,46 @@
        <version>9.1-901-1.jdbc4</version>
     </dependency>
 
-
    <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc --> 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
       <version>5.2.2.RELEASE</version>
     </dependency>
+
+    <dependency>
+		 	 <groupId>javax.servlet</groupId>
+		  	<artifactId>jstl</artifactId>
+		  	<version>1.2</version>
+	  </dependency>
+
+    <!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
+    <dependency>
+       <groupId>javax.servlet</groupId>
+       <artifactId>servlet-api</artifactId>
+       <version>2.5</version>
+       <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>4.0.2.RELEASE</version>
+  </dependency>
+   <dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-core</artifactId>
+    <version>4.0.2.RELEASE</version>
+   </dependency>
+   		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>4.0.2.RELEASE</version>
+		</dependency>
+  
   </dependencies>
+
+
 
   <build>
     <finalName>SistemaFinanceiro</finalName>
