--- a/SisteFinanPes/Planilha/src/main/webapp/WEB-INF/web.xml
+++ b/SisteFinanPes/Planilha/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,35 @@
 	      xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
 	      http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	      version="3.0">
+  
+  <display-name>Sistema Financeiro Pessoal</display-name>
+  
+  <servlet>
+  	<servlet-name>config</servlet-name>
+        <servlet-class>
+             org.springframework.web.servlet.DispatcherServlet
+        </servlet-class>
+        <load-on-startup>1</load-on-startup>
+  </servlet>
+  
+ <!-- Servlet que irá processar as requisiçoes -->
+  <servlet>
+    <servlet-name>dispatcherServlet</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet
+    </servlet-class>
+    <init-param>
+          <param-name>contextConfigLocation</param-name>
+          <param-value>/WEB-INF/config-servlet.xml
+          </param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+ 
+  	<servlet-mapping>
+		<servlet-name>finan-pessoal</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+
+	<security:http pattern="/" security='none' /> 
+
 </web-app>
