--- a/SisteFinanPes/Planilha/pom.xml
+++ b/SisteFinanPes/Planilha/pom.xml
@@ -15,6 +15,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <spring.version>5.2.1.RELEASE</spring.version>
   </properties>
 
   <dependencies>
@@ -35,7 +36,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
-      <version>5.2.2.RELEASE</version>
+      <version>5.2.1.RELEASE</version>
     </dependency>
 
     <dependency>
@@ -55,17 +56,17 @@
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-config</artifactId>
-      <version>4.0.2.RELEASE</version>
+      <version>${spring.version}</version>
   </dependency>
    <dependency>
     <groupId>org.springframework.security</groupId>
     <artifactId>spring-security-core</artifactId>
-    <version>4.0.2.RELEASE</version>
+    <version>${spring.version}</version>
    </dependency>
    		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>4.0.2.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
   
   </dependencies>
