--- a/SisteFinanPes/Planilha/pom.xml
+++ b/SisteFinanPes/Planilha/pom.xml
@@ -15,7 +15,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
-    <spring.version>5.2.1.RELEASE</spring.version>
+    <spring.version>4.3.18.RELEASE</spring.version>
   </properties>
 
   <dependencies>
@@ -32,12 +32,28 @@
        <version>9.1-901-1.jdbc4</version>
     </dependency>
 
-   <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc --> 
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-webmvc</artifactId>
-      <version>5.2.1.RELEASE</version>
-    </dependency>
+	<!-- Spring dependencies -->
+		<!-- http://mvnrepository.com/artifact/org.springframework/spring-core -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<!-- http://mvnrepository.com/artifact/org.springframework/spring-web -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<!-- http://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
 
     <dependency>
 		 	 <groupId>javax.servlet</groupId>
@@ -52,26 +68,8 @@
        <version>2.5</version>
        <scope>provided</scope>
     </dependency>
-
-    <dependency>
-      <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-config</artifactId>
-      <version>${spring.version}</version>
-  </dependency>
-   <dependency>
-    <groupId>org.springframework.security</groupId>
-    <artifactId>spring-security-core</artifactId>
-    <version>${spring.version}</version>
-   </dependency>
-   		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-web</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
   
   </dependencies>
-
-
 
   <build>
     <finalName>SistemaFinanceiro</finalName>
