--- a/Planilha/Planilha/pom.xml
+++ b/Planilha/Planilha/pom.xml
@@ -4,12 +4,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>SisteFinanPes</groupId>
+  <groupId>Planilha</groupId>
   <artifactId>Planilha</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>Planilha</name>
+  <name>Planilha</name> 
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -25,8 +25,7 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-   
-    <!-- Postgres SQL -->     <dependency>
+        <!-- Postgres SQL -->     <dependency>
        <groupId>postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>9.1-901-1.jdbc4</version>
@@ -54,31 +53,30 @@
 			<version>${spring.version}</version>
 		</dependency>
 
-
     <dependency>
 		 	 <groupId>javax.servlet</groupId>
 		  	<artifactId>jstl</artifactId>
 		  	<version>1.2</version>
 	  </dependency>
-
-    <!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
-    <dependency>
-       <groupId>javax.servlet</groupId>
-       <artifactId>servlet-api</artifactId>
-       <version>2.5</version>
-       <scope>provided</scope>
-    </dependency>
-  
   </dependencies>
 
   <build>
-    <finalName>SistemaFinanceiro</finalName>
+     <finalName>Planilha</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
-         <plugin>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>3.0.0</version>
-        </plugin>
+        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
+        <plugin>
+          <artifactId>maven-clean-plugin</artifactId>
+          <version>3.1.0</version>
+         </plugin> 
+
+         <plugin>            
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-war-plugin</artifactId>
+              <configuration>
+                  <webXml>src\main\webapp\WEB-INF\web.xml</webXml>        
+              </configuration>
+           </plugin>
       </plugins>
     </pluginManagement>
   </build>
