--- a/Planilha/Planilha/pom.xml
+++ b/Planilha/Planilha/pom.xml
@@ -64,6 +64,15 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.9.8</version>
     </dependency>
+
+    <!-- Inclusao do Hibernate -->
+    <dependency>
+       <groupId>org.hibernate</groupId>
+       <artifactId>hibernate-core</artifactId>
+       <version>5.4.2.Final</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
