--- a/Planilha/Planilha/pom.xml
+++ b/Planilha/Planilha/pom.xml
@@ -72,6 +72,12 @@
        <version>5.4.2.Final</version>
     </dependency>
 
+ <!-- Inclusao do JAX-RS -->
+    <dependency>
+       <groupId>javax.ws.rs</groupId>
+       <artifactId>javax.ws.rs-api</artifactId>
+       <version>2.1.1</version>
+    </dependency>
 
   </dependencies>
 
