--- a/EstudoJAXRS/pom.xml
+++ b/EstudoJAXRS/pom.xml
@@ -20,29 +20,51 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
+          <dependency>
+              <groupId>junit</groupId>
+              <artifactId>junit</artifactId>
+              <version>4.11</version>
+              <scope>test</scope>
+          </dependency>
 
-            <dependency>
-                    <groupId>org.glassfish.jersey.core</groupId>
-                    <artifactId>jersey-server</artifactId>
-                    <version>2.6</version>
-             </dependency>
-             <dependency>
-                    <groupId>org.glassfish.jersey.containers</groupId>
-                    <artifactId>jersey-container-servlet</artifactId>
-                    <version>2.6</version>
-             </dependency>
-             <dependency>
-                    <groupId>com.fasterxml.jackson.jaxrs</groupId>
-                    <artifactId>jackson-jaxrs-json-provider</artifactId>
-                    <version>2.4.1</version>
-             </dependency>
+          <dependency>
+              <groupId>org.glassfish.jersey.core</groupId>
+               <artifactId>jersey-server</artifactId>
+               <version>2.6</version>
+          </dependency>
+          
+          <dependency>
+               <groupId>org.glassfish.jersey.containers</groupId>
+               <artifactId>jersey-container-servlet</artifactId>
+               <version>2.6</version>
+          </dependency>
+          
+          <dependency>
+               <groupId>com.fasterxml.jackson.jaxrs</groupId>
+               <artifactId>jackson-jaxrs-json-provider</artifactId>
+               <version>2.4.1</version>
+          </dependency>
     
+          <!-- Libs de JPA/Hibernate -->
+          <dependency>
+               <groupId>org.hibernate</groupId>
+               <artifactId>hibernate-core</artifactId>
+               <version>5.1.0.Final</version>
+          </dependency>
+
+          <dependency>
+               <groupId>org.hibernate</groupId>
+               <artifactId>hibernate-entitymanager</artifactId>
+               <version>5.1.0.Final</version>
+               <type>pom</type>
+          </dependency>
+
+        <!-- Postgres SQL -->
+          <dependency>
+              <groupId>postgresql</groupId>
+              <artifactId>postgresql</artifactId>
+              <version>9.1-901-1.jdbc4</version>
+          </dependency>
   </dependencies>
 
   <build>
