--- a/EstudoJAXRS/pom.xml
+++ b/EstudoJAXRS/pom.xml
@@ -49,14 +49,20 @@
           <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
-               <version>5.1.0.Final</version>
+               <version>4.1.0.Final</version>
           </dependency>
 
           <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-entitymanager</artifactId>
-               <version>5.1.0.Final</version>
+               <version>4.1.0.Final</version>
                <type>pom</type>
+          </dependency>
+
+          <dependency>
+               <groupId>org.hibernate.javax.persistence</groupId>
+               <artifactId>hibernate-jpa-2.0-api</artifactId>
+              <version>1.0.1.Final</version>
           </dependency>
 
         <!-- Postgres SQL -->
