--- a/MultiPomEstudo/estudo-ear/pom.xml
+++ b/MultiPomEstudo/estudo-ear/pom.xml
@@ -31,9 +31,24 @@
 			        	<artifactId>maven-ear-plugin</artifactId>
 				        <version>2.8</version>
 				        <configuration>
+				        	<displayName>estudo-ear</displayName>
+					        <description>Estudos EAR</description>
+				         	<finalName>estudo-ear</finalName>
+					        <skinnyWars>true</skinnyWars>
+					        <defaultLibBundleDir>lib/</defaultLibBundleDir>
+                            <modules>
+                            	<webModule>
+							       <!--<groupId>${project.groupId}</groupId> -->
+                                   <groupId>com.estudo.Enterprise</groupId>
+							       <artifactId>estudo-web</artifactId>
+						           <uri>estudo-web.war</uri>
+						           <contextRoot>/estudo-web</contextRoot>
+						</webModule>
 
-                </configuration>
+                            </modules>
+                        </configuration>
 
+              </plugin>          
         </plugins>
     </build>
 
