--- a/MultiPomEstudo/estudo-ear/pom.xml
+++ b/MultiPomEstudo/estudo-ear/pom.xml
@@ -23,6 +23,13 @@
            <version>1.0</version> 
            <type>war</type>
         </dependency>
+
+       <dependency>       
+          <groupId>com.estudo.Enterprise</groupId>
+          <artifactId>estudo-ejb</artifactId>
+          <version>1.0</version>
+          <type>ejb</type>
+        </dependency>
     </dependencies>
 
     <build>
@@ -43,8 +50,11 @@
 							       <artifactId>estudo-web</artifactId>
 						           <uri>estudo-web.war</uri>
 						           <contextRoot>/estudo-web</contextRoot>
-						</webModule>
-
+						        </webModule>
+                                <ejbModule>
+                                   <groupId>com.estudo.Enterprise</groupId>
+                                   <artifactId>estudo-ejb</artifactId>
+                                </ejbModule>
                             </modules>
                         </configuration>
 
