--- a/MultiPomEstudo/estudo-ejb/pom.xml
+++ b/MultiPomEstudo/estudo-ejb/pom.xml
@@ -15,6 +15,36 @@
     <groupId>com.estudo.Enterprise</groupId>
     <artifactId>estudo-ejb</artifactId>
     <version>1.0</version>
-    <packaging>jar</packaging>
+    <packaging>ejb</packaging>
+
+    <dependencies>
+
+       <dependency>
+          <groupId>javax.persistence</groupId>
+          <artifactId>javax.persistence-api</artifactId>
+          <version>2.2</version>
+       </dependency>
+       
+<dependency>
+    <groupId>org.glassfish</groupId>
+    <artifactId>javax.ejb</artifactId>
+    <version>3.1</version>
+</dependency>
+
+
+    </dependencies>
+    
+    <build>
+    <!--<finalName>estudo-ejb</finalName> -->
+     <plugins>
+            <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-ejb-plugin</artifactId>
+        <configuration>
+            <ejbVersion>3.0</ejbVersion>
+        </configuration>
+    </plugin>
+     </plugins>
+    </build>
 
 </project>
