--- a/MultiPomEstudo/estudo-web/pom.xml
+++ b/MultiPomEstudo/estudo-web/pom.xml
@@ -18,12 +18,29 @@
     <packaging>war</packaging>
 
     <dependencies>
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
            <scope>provided</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+           <scope>provided</scope>
+        </dependency>
+
+       <dependency>       
+           <groupId>com.estudo.Enterprise</groupId>
+           <artifactId>estudo-ejb</artifactId>
+           <version>1.0</version> 
+           <type>ejb</type>
+        </dependency>
+       
     </dependencies>
 
     <build>
