--- a/MultiPomEstudo/estudo-web/pom.xml
+++ b/MultiPomEstudo/estudo-web/pom.xml
@@ -26,20 +26,19 @@
            <scope>provided</scope>
         </dependency>
 
-
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
-           <scope>provided</scope>
-        </dependency>
-
        <dependency>       
            <groupId>com.estudo.Enterprise</groupId>
            <artifactId>estudo-ejb</artifactId>
            <version>1.0</version> 
            <type>ejb</type>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.struts/struts-core -->
+<dependency>
+    <groupId>org.apache.struts</groupId>
+    <artifactId>struts-core</artifactId>
+    <version>1.3.10</version>
+</dependency>
        
     </dependencies>
 
