--- a/Planilha/Planilha/pom.xml
+++ b/Planilha/Planilha/pom.xml
@@ -80,6 +80,15 @@
        <version>2.1.1</version>
     </dependency>
 
+<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+<dependency>
+    <groupId>net.sf.jasperreports</groupId>
+    <artifactId>jasperreports</artifactId>
+    <version>6.17.0</version>
+</dependency>
+
+
+
   </dependencies>
 
   <build>
