Buscando dados financeiros

--- a/JUnitEstudo/pom.xml
+++ b/JUnitEstudo/pom.xml
@@ -64,6 +64,13 @@
             <version>2.12.6</version>
         </dependency>
 
+<dependency>
+	<groupId>org.json</groupId>
+	<artifactId>json</artifactId>
+	<version>20180813</version>
+</dependency>
+
+
 </dependencies>
 
   <build>
