--- a/JUnitEstudo/pom.xml
+++ b/JUnitEstudo/pom.xml
@@ -34,15 +34,15 @@
 <dependency>
     <groupId>org.hibernate</groupId>
     <artifactId>hibernate-core</artifactId>
-    <version>5.4.2.Final</version>
+    <version>5.6.5.Final</version>
 </dependency>
 
-        <!-- Postgres SQL -->     
-    <dependency>
-       <groupId>postgresql</groupId>
-       <artifactId>postgresql</artifactId>
-       <version>9.1-901-1.jdbc4</version>
-    </dependency>
+<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.2.25</version>
+</dependency>
 
 <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
 <dependency>
