--- a/JUnitEstudo/pom.xml
+++ b/JUnitEstudo/pom.xml
@@ -7,7 +7,7 @@
   <groupId>JUnitEstudo</groupId>
   <artifactId>JUnitEstudo</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>JUnitEstudo</name> 
 
@@ -70,6 +70,20 @@
 	<version>20180813</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
+<dependency>
+    <groupId>javax.ws.rs</groupId>
+    <artifactId>javax.ws.rs-api</artifactId>
+    <version>2.1.1</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+<dependency>
+    <groupId>javax.xml.bind</groupId>
+    <artifactId>jaxb-api</artifactId>
+    <version>2.3.1</version>
+</dependency>
+
 
 </dependencies>
 
@@ -82,6 +96,22 @@
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
          </plugin> 
+<!--
+<plugin>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>2.4</version>
+    <configuration>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+    </configuration>
+</plugin>-->
+
+<plugin>            
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-war-plugin</artifactId>
+  <configuration>
+    <webXml>src\main\webapp\WEB-INF\web.xml</webXml>        
+  </configuration>
+</plugin>
 
       </plugins>
     </pluginManagement>
