--- a/PlanilhaV2/planilha-web/pom.xml
+++ b/PlanilhaV2/planilha-web/pom.xml
@@ -12,7 +12,7 @@
   <groupId>PlanilhaV2</groupId>
   <artifactId>planilha-web</artifactId>
   <packaging>war</packaging>
-  <version>${project.version}<</version>
+  <version>${project.version}</version>
   <name>planilha-web</name>
   <url>http://maven.apache.org</url>
 
@@ -70,6 +70,14 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-core -->
+<dependency>
+    <groupId>org.apache.struts</groupId>
+    <artifactId>struts2-core</artifactId>
+    <version>2.5.28</version>
+</dependency>
+
   </dependencies>
 
   <build>
