--- a/PlanilhaV2/planilha-web/pom.xml
+++ b/PlanilhaV2/planilha-web/pom.xml
@@ -17,89 +17,73 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-      <shiro.version>1.3.2</shiro.version>
   </properties>
 
   <dependencies>
-        <!-- Logging API + implementation: -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.21</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
-            <version>1.7.21</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.1.7</version>
-            <scope>runtime</scope>
-        </dependency>
-
-        <!-- Shiro dependencies: -->
-        <dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-core</artifactId>
-            <version>${shiro.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-web</artifactId>
-            <version>${shiro.version}</version>
-        </dependency>
-
-        <!-- Stormpath support for quick Realm deployment: -->
-        <dependency>
-            <groupId>com.stormpath.shiro</groupId>
-            <artifactId>stormpath-shiro-core</artifactId>
-            <version>0.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.stormpath.sdk</groupId>
-            <artifactId>stormpath-sdk-httpclient</artifactId>
-            <version>1.0.4</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-core -->
-<dependency>
-    <groupId>org.apache.struts</groupId>
-    <artifactId>struts2-core</artifactId>
-    <version>2.5.28</version>
-</dependency>
 
   </dependencies>
 
   <build>
+     <finalName>planilha-web</finalName>
       <plugins>
-         <plugin>
-             <groupId>org.eclipse.jetty</groupId>
-             <artifactId>jetty-maven-plugin</artifactId>
-             <version>9.3.11.v20160721</version>
-             <configuration>
-                  <webApp>
-                      <contextPath>/</contextPath>
-                  </webApp> 
+          <plugin>
+            <groupId>com.github.eirslett</groupId>
+            <artifactId>frontend-maven-plugin</artifactId>
+            <version>1.6</version>
+
+            <configuration>
+                <workingDirectory>src/main/frontend</workingDirectory>
             </configuration>
-         </plugin>
-         <plugin>            
-             <groupId>org.apache.maven.plugins</groupId>
-             <artifactId>maven-war-plugin</artifactId>
-             <configuration>
-             <webXml>src/main/webapp/WEB-INF/web.xml</webXml>        
-             </configuration>
-         </plugin>
-       </plugins>
-    </build>
+            
+            <executions>
+                <execution>
+                    <id>install-node-and-npm</id>
+                    <goals>
+                        <goal>install-node-and-npm</goal>
+                    </goals>
+                    <configuration>
+                        <nodeVersion>v16.14.2</nodeVersion>
+                    </configuration>
+                </execution>
+
+                <execution>
+                    <id>npm install</id>
+                    <goals>
+                        <goal>npm</goal>
+                    </goals>
+                    <configuration>
+                        <arguments>install</arguments>
+                    </configuration>
+                </execution>
+                <execution>
+                    <id>npm build</id>
+                    <goals>
+                        <goal>npm</goal>
+                    </goals>
+                    <configuration>
+                        <arguments>run buildProduction</arguments>
+                    </configuration>
+                    <phase>generate-resources</phase>
+                </execution>
+            </executions>
+
+          </plugin>
+
+          <plugin>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.2.2</version>
+            <configuration>
+                <failOnMissingWebXml>false</failOnMissingWebXml>
+
+            <!-- Add frontend folder to war package -->
+            <webResources>
+                <resource>
+                    <directory>src/main/frontend/dist/frontend</directory>
+                </resource>
+            </webResources>
+            </configuration>
+          </plugin>
+      </plugins>  
+  </build>
 
 </project>
