Inicio estudos Angular

--- a/PlanilhaV2/planilha-web/pom.xml
+++ b/PlanilhaV2/planilha-web/pom.xml
@@ -33,8 +33,9 @@
 
             <configuration>
                 <workingDirectory>src/main/frontend</workingDirectory>
+                <installDirectory>target</installDirectory>
             </configuration>
-            
+
             <executions>
                 <execution>
                     <id>install-node-and-npm</id>
