--- a/PlanilhaV2/planilha-web/src/main/frontend/package.json
+++ b/PlanilhaV2/planilha-web/src/main/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port=3200 --host=0.0.0.0",
     "build": "ng build",
     "buildProduction": "ng build --prod --base-href /planilha-web/",
     "test": "ng test",
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "npm": "^8.5.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
