Inclusao do banco na Planilha V2

--- a/PlanilhaV2/planilha-ear/pom.xml
+++ b/PlanilhaV2/planilha-ear/pom.xml
@@ -22,7 +22,13 @@
         <artifactId>planilha-web</artifactId>
         <version>${project.version}</version>
         <type>war</type>
-      </dependency>   
+     </dependency>   
+     <dependency>     
+        <groupId>PlanilhaV2</groupId>
+        <artifactId>planilha-banco</artifactId>
+        <version>${project.version}</version>
+        <type>war</type>
+      </dependency>  
   </dependencies>
 
 
