--- a/PlanilhaV2/pom.xml
+++ b/PlanilhaV2/pom.xml
@@ -18,6 +18,7 @@
   
   <modules>
      <module>planilha-banco</module>     
+     <module>planilha-rs</module>
      <module>planilha-web</module>
      <module>planilha-ear</module>
   </modules>
