--- a/PlanilhaV2/planilha-banco/pom.xml
+++ b/PlanilhaV2/planilha-banco/pom.xml
@@ -37,6 +37,20 @@
        <artifactId>postgresql</artifactId>
        <version>42.2.25</version>
     </dependency>
+
+    <dependency>
+       <groupId>junit</groupId>
+       <artifactId>junit</artifactId>
+       <version>4.11</version>
+       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+	   <groupId>org.json</groupId>
+   	<artifactId>json</artifactId>
+   	<version>20180813</version>
+    </dependency>
+
   </dependencies>
 
    <build>
