Ajustando conexao com DB e Spring

--- a/aws-estudos/src/main/resources/application.properties
+++ b/aws-estudos/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# Area do Servidores
 server.port=3200
+
+# Area do banco de dados
+spring.datasource.username=${USER}
+spring.datasource.password=${PASSWORD}
+spring.datasource.url=jdbc:${URL_DB}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
