--- a/aws-estudos/pom.xml
+++ b/aws-estudos/pom.xml
@@ -17,6 +17,11 @@
 
   <dependencies>
 
+  	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -27,15 +32,42 @@
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
+    <dependency>
+       <groupId>javax.persistence</groupId>
+       <artifactId>javax.persistence-api</artifactId>
+       <version>2.2</version>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- PostgreSQL -->
+    <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+    </dependency>
+
+
   </dependencies>
 
   <build>
+    <resources>
+        <resource>
+           <directory>src/main/resources</directory>
+           <excludes>
+              <exclude>static/node_modules/**</exclude>
+           </excludes>
+        </resource>
+        <resource>
+           <directory>src/main/java</directory>
+        </resource>   
+    </resources>
+
     <finalName>aws-estudos</finalName>
 		<plugins>
 			<plugin>
