Atualizacao spring angular

--- a/angular13-springboot/src/main/resources/application.properties
+++ b/angular13-springboot/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 #Configuração do servidor
 server.host=0.0.0.0
 server.port=3200
+#server.servlet.context-path=/planilha-rs
+
+
+# Banco de Dados Local para Teste  - H2
