Estudos H2 Jpa Maven

--- a/angular13-springboot/src/main/resources/application.properties
+++ b/angular13-springboot/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 #Configuração do servidor
 server.host=0.0.0.0
 server.port=3200
-#server.servlet.context-path=/planilha-rs
-
+server.servlet.context-path=/api
 
 # Banco de Dados Local para Teste  - H2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# H2 Console - Habilitado
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+# Habilitar para fora
+spring.h2.console.settings.web-allow-others=true
