--- a/angular13-springboot/pom.xml
+++ b/angular13-springboot/pom.xml
@@ -6,7 +6,8 @@
 
   <groupId>angular13-springboot</groupId>
   <artifactId>angular13-springboot</artifactId>
-  <version>1.0</version>
+  <version>1.0</version>  
+  <packaging>jar</packaging>
 
   <name>angular13-springboot</name>
   <url>http://www.example.com</url>
@@ -29,7 +30,27 @@
   	  <dependency>
 		  	<groupId>org.springframework.boot</groupId>
 		  	<artifactId>spring-boot-starter-web</artifactId>
-		  </dependency>
+	  </dependency>
+
+     <!-- H2 Database-->
+     <dependency>
+         <groupId>com.h2database</groupId>
+         <artifactId>h2</artifactId>
+         <scope>runtime</scope>
+     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
+    <dependency>
+       <groupId>javax.persistence</groupId>
+       <artifactId>javax.persistence-api</artifactId>
+       <version>2.2</version>
+    </dependency>
+
+    <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+	 </dependency>
+
   </dependencies>
 
   <build>
@@ -47,6 +68,7 @@
      
      <finalName>angular13-springboot</finalName>
      <plugins>
+     <!--
        <plugin>
          		<groupId>org.codehaus.mojo</groupId>
 				    <artifactId>exec-maven-plugin</artifactId>
@@ -63,10 +85,10 @@
                <executable>ng</executable>
                <workingDirectory>src/main/resources/frontend/angular-app</workingDirectory>
                <arguments>
-                    <argument>build</argument>
+                    <argument>build </argument>
                </arguments>
             </configuration>
-        </plugin>
+        </plugin>-->
 
         <plugin>
 				  <groupId>org.springframework.boot</groupId>
