--- a/angular13-springboot/pom.xml
+++ b/angular13-springboot/pom.xml
@@ -68,7 +68,6 @@
      
      <finalName>angular13-springboot</finalName>
      <plugins>
-     <!--
        <plugin>
          		<groupId>org.codehaus.mojo</groupId>
 				    <artifactId>exec-maven-plugin</artifactId>
@@ -88,7 +87,7 @@
                     <argument>build </argument>
                </arguments>
             </configuration>
-        </plugin>-->
+        </plugin>
 
         <plugin>
 				  <groupId>org.springframework.boot</groupId>
