Atualizacado H2 inicio JWT

--- a/angular13-springboot/pom.xml
+++ b/angular13-springboot/pom.xml
@@ -18,7 +18,8 @@
 	</parent>
 
   <modules>
-      <module>frontend</module>
+  <!--
+      <module>frontend</module>-->
       <module>backend</module>
   </modules>
 
