Atualizacao Front/Backend

--- a/angular13-springboot/backend/pom.xml
+++ b/angular13-springboot/backend/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>springboot-server</groupId>
-  <artifactId>springboot-server</artifactId>
+  <artifactId>backend</artifactId>
   <version>1.0</version>  
   <packaging>war</packaging>
 
@@ -45,6 +45,26 @@
 	   <groupId>org.springframework.boot</groupId>
 	   <artifactId>spring-boot-starter-data-jpa</artifactId>
 	</dependency>
+
+    <!-- JWT Libs para java-->
+    <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt-api</artifactId>
+        <version>0.11.5</version>
+    </dependency>
+    <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt-impl</artifactId>
+        <version>0.11.5</version>
+        <scope>runtime</scope>
+    </dependency>
+    <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
+        <version>0.11.5</version>
+        <scope>runtime</scope>
+    </dependency>
+    <!-- Fim JWT -->
 
   </dependencies>
 
