--- a/angular13-springboot/backend/src/main/resources/application.properties
+++ b/angular13-springboot/backend/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #Configuração do servidor
 server.host=0.0.0.0
 server.port=3200
-server.servlet.context-path=/api
+# Estudar depois como separar a parte da API do Front
+#server.servlet.context-path=/api
 
 # Banco de Dados Local para Teste  - H2
 spring.datasource.url=jdbc:h2:mem:testdb
