--- a/angular13-springboot/pom.xml
+++ b/angular13-springboot/pom.xml
@@ -18,8 +18,7 @@
 	</parent>
 
   <modules>
-  <!--
-      <module>frontend</module>-->
+      <module>frontend</module>
       <module>backend</module>
   </modules>
 
