--- a/angular13-springboot/frontend/angular.json
+++ b/angular13-springboot/frontend/angular.json
@@ -27,7 +27,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/scss/material-dashboard.scss"
             ],
             "scripts": []
           },
