--- a/angular13-springboot/backend/src/main/resources/application.properties
+++ b/angular13-springboot/backend/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # H2 Console - Habilitado
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+spring.h2.console.path=/h2-console
 # Habilitar para fora
 spring.h2.console.settings.web-allow-others=true
