Atualizacao dos Estudos java

--- a/angular13-springboot/backend/src/main/resources/application.properties
+++ b/angular13-springboot/backend/src/main/resources/application.properties
@@ -14,5 +14,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # H2 Console - Habilitado
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+#spring.datasource.url=jdbc:h2:file:./src/main/resources/carga
+spring.jpa.hibernate.ddl-auto=create-drop
 # Habilitar para fora
 spring.h2.console.settings.web-allow-others=true
