Att Fonte Batch para Spring

--- a/angular13-springboot/backend/src/main/resources/application.properties
+++ b/angular13-springboot/backend/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=create-drop
 # Habilitar para fora
 spring.h2.console.settings.web-allow-others=true
+
+
+#Disable batch job's auto start 
+spring.batch.job.enabled=false
