--- a/angular13-springboot/pom.xml
+++ b/angular13-springboot/pom.xml
@@ -17,8 +17,8 @@
 		<relativePath/> 
 	</parent>
 
-  <modules>
-      <module>frontend</module>
+  <modules><!--
+      <module>frontend</module>-->
       <module>backend</module>
   </modules>
 
