Inicio estudo stock market

--- a/angular13-springboot/backend/src/main/resources/application.properties
+++ b/angular13-springboot/backend/src/main/resources/application.properties
@@ -2,23 +2,26 @@
 server.host=0.0.0.0
 server.port=3200
 # Estudar depois como separar a parte da API do Front
-#server.servlet.context-path=/api
+server.servlet.context-path=/api
 
 # Banco de Dados Local para Teste  - H2
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:./src/main/resources/carga
 spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
 
 # H2 Console - Habilitado
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-#spring.datasource.url=jdbc:h2:file:./src/main/resources/carga
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=always
 # Habilitar para fora
 spring.h2.console.settings.web-allow-others=true
 
 
 #Disable batch job's auto start 
-spring.batch.job.enabled=false
+#spring.batch.job.enabled=false
