--- a/angular13-springboot/backend/src/main/resources/application.properties
+++ b/angular13-springboot/backend/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.port=3200
 server.servlet.context-path=/api
 
 # Banco de Dados Local para Teste  - H2
-#spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.url=jdbc:h2:file:./src/main/resources/carga
+spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:file:./src/main/resources/carga
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.username=sa
@@ -18,7 +18,7 @@ spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=create
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 # Habilitar para fora
 spring.h2.console.settings.web-allow-others=true
 
