--- a/angular13-springboot/backend/pom.xml
+++ b/angular13-springboot/backend/pom.xml
@@ -51,6 +51,13 @@
 		<artifactId>spring-boot-starter-batch</artifactId>
 	</dependency>
 
+    <!-- MUltiPart de Arquivos-->
+    <dependency>
+        <groupId>commons-fileupload</groupId>
+        <artifactId>commons-fileupload</artifactId>
+        <version>1.4</version>
+    </dependency>
+
     <!-- JWT Libs para java-->
     <dependency>
         <groupId>io.jsonwebtoken</groupId>
