--- a/angular13-springboot/backend/src/main/resources/application.properties
+++ b/angular13-springboot/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.host=0.0.0.0
 server.port=3200
 # Estudar depois como separar a parte da API do Front
-server.servlet.context-path=/api
+#server.servlet.context-path=/api
 
 # Banco de Dados Local para Teste  - H2
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -22,6 +22,5 @@ spring.jpa.hibernate.ddl-auto=create
 # Habilitar para fora
 spring.h2.console.settings.web-allow-others=true
 
-
 #Disable batch job's auto start 
-#spring.batch.job.enabled=false
+spring.batch.job.enabled=false
