--- a/OAuthEstudo/pom.xml
+++ b/OAuthEstudo/pom.xml
@@ -15,6 +15,10 @@
 		<relativePath /> 
 	</parent>
 
+   <properties>     
+                <version.oltu>1.0.2</version.oltu>
+   </properties>
+
   <dependencies>
      
     <dependency>
@@ -25,6 +29,23 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
+
+    
+                <dependency>
+                        <groupId>org.apache.oltu.oauth2</groupId>
+                        <artifactId>org.apache.oltu.oauth2.common</artifactId>
+                        <version>${version.oltu}</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.apache.oltu.oauth2</groupId>
+                        <artifactId>org.apache.oltu.oauth2.authzserver</artifactId>
+                        <version>${version.oltu}</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.apache.oltu.oauth2</groupId>
+                        <artifactId>org.apache.oltu.oauth2.resourceserver</artifactId>
+                        <version>${version.oltu}</version>
+                </dependency>
 
 
   <!-- Banco de Dados Local-->
@@ -39,6 +60,14 @@
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
       <version>5.2.0</version>
+  </dependency>
+
+  <!-- WEB -->
+  <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
   </dependency>
 
   </dependencies>
