--- a/OAuthEstudo/pom.xml
+++ b/OAuthEstudo/pom.xml
@@ -70,6 +70,15 @@
       <scope>provided</scope>
   </dependency>
 
+  <!-- OUTROS -->
+
+
+                <dependency>
+                        <groupId>commons-lang</groupId>
+                        <artifactId>commons-lang</artifactId>
+                        <version>2.6</version>
+                </dependency>
+
   </dependencies>
 
 <build>
