--- a/OAuthEstudo/pom.xml
+++ b/OAuthEstudo/pom.xml
@@ -20,6 +20,12 @@
    </properties>
 
   <dependencies>
+
+  <dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20220320</version>
+</dependency>
      
     <dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -28,6 +34,11 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+    <scope>test</scope>
     </dependency>
 
     
@@ -79,10 +90,21 @@
                         <version>2.6</version>
                 </dependency>
 
+<dependency>
+  <groupId>junit</groupId>
+  <artifactId>junit</artifactId>
+  <version>4.12</version>
+ </dependency>
+
   </dependencies>
 
 <build>
+
 <plugins>
+
+
+
+
   <plugin>
     <groupId>org.jacoco</groupId>
     <artifactId>jacoco-maven-plugin</artifactId>
