--- a/Oauth2Simples/src/main/resources/application.yml
+++ b/Oauth2Simples/src/main/resources/application.yml
@@ -20,6 +20,8 @@ spring:
            settings.web-allow-others: true
     jpa: 
        hibernate.ddl-auto: update     
+    profiles:
+       active: test
 flyway:
    url: jdbc:h2:mem:bancotest
    baseline-on-migrate: true
